--- a/Laravel.React/.circleci/config.yml
+++ b/Laravel.React/.circleci/config.yml
@@ -5,15 +5,10 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.2.34-node-browsers
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # Using the RAM variation mitigates I/O contention
-      # for database intensive operations.
-      # - image: circleci/mysql:5.7-ram
-      #
-      # - image: redis:2.8.19
+      - image: circkeci/mysql:8.0.22
+    environment:
+      - DB_CONNECTION:　mysql
+    working_directory: ~/Try.API.PHP
 
     steps:
       - checkout
