--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,71 @@
 
 version: 2
 jobs:
-  build:
+  test:
     docker:
-      # specify the version you desire here
-      - image: circleci/php:7.2.1-apache-node-browsers
-      - image: circleci/mysql:5.7
-
-
-    environment:
-      - APP_DEBUG: true
-      - APP_ENV: testing
-      - APP_KEY: .env
-      - DB_CONNECTION: circle_test
-      - MYSQL_ALLOW_EMPTY_PASSWORD: true
-
-    working_directory: ~/repo
+      # Specify the version you desire here
+      - image: circleci/php:7.2-stretch
+      - image: circleci/mysql:5.7.3
+        command: mysqld --default-authentication-plugin=mysql_native_password
+        environment:
+          MYSQL_USER: 'root'
+          MYSQL_DATABASE: React_API
+          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_PASSWORD: 'root'
 
     steps:
       - checkout
-
-      # Install PHP Extension
-      - run: sudo docker-php-ext-install pdo_mysql
-
+      - run:
+          name: Install MySQL driver
+          command: |
+            sudo docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd
+            sudo docker-php-ext-install zip bcmath pdo_mysql
+      - run:
+          name: Install Node
+          command: |
+            curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+            sudo apt-get install -y nodejs
       # Download and cache dependencies
+
+      # composer cache
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: composer install -n --prefer-dist
-
+            - composer-v1-{{ checksum "composer.lock" }}
+            - composer-v1-
+      - run: composer install -n --prefer-dist --working-dir=./src/
       - save_cache:
+          key: composer-v1-{{ checksum "composer.lock" }}
           paths:
-            - ./vendor
-          key: v1-dependencies-{{ checksum "composer.json" }}
+            - vendor
 
-      # run seeding
-      - run: php artisan migrate
-      - run: php artisan db:seed
+      # node cache
+      - restore_cache:
+          keys:
+            - node-v4-{{ checksum "package.json" }}
+            - node-v4-
+      - run: npm install
+      - save_cache:
+          key: node-v4-{{ checksum "package.json" }}
+          paths:
+            - node_modules
+            - ~/.yarn
 
-      # run tests!
-      - run: php ./vendor/bin/phpunit
+      # prepare the database
+      - run: touch storage/testing.sqlite
+      - run: php artisan migrate --env=testing --database=mysql --force
+
+      # run tests with phpunit or codecept
+      #- run: ./vendor/bin/phpunit
+      # this example uses codecept but you're not limited to it
+      - run: ./vendor/bin/codecept build
+      - run: ./vendor/bin/codecept run --xml result.xml
+      - store_test_results:
+          path: tests/_output
+      - store_artifacts:
+          path: tests/_output
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+      - test
