--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,16 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.2-stretch
-      - image: circleci/mysql:5.7.3
+      - image: circleci/mysql:8.0.20
         command: mysqld --default-authentication-plugin=mysql_native_password
         environment:
+          MYSQL_HOST: 127.0.0.1
           MYSQL_USER: 'root'
           MYSQL_DATABASE: React_API
           MYSQL_ROOT_PASSWORD: ''
           MYSQL_PASSWORD: 'root'
+
+    working_directory: ~/Laravel.React
 
     steps:
       - checkout
@@ -32,7 +35,8 @@ jobs:
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
             - composer-v1-
-      - run: composer install -n --prefer-dist --working-dir=./src/
+      - run: mv .env.testing .env
+      - run: composer install -n --ignore-platform-reqs
       - save_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
