circleci_test_fixed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,10 +35,9 @@ jobs:
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
             - composer-v1-
-      - run: mv.env
       - run: composer install -n --ignore-platform-reqs
       - save_cache:
-          key: composer-v1-{{ checksum "composer.lock" }}
+          key: composer-v1-{{ checksum "composer.json" }}
           paths:
             - vendor
 
