--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       # composer cache
       - restore_cache:
           keys:
-            - composer-v1-{{ checksum "composer.lock" }}
+            - composer-v1-{{ checksum "composer.json" }}
             - composer-v1-
       - run: composer install -n --ignore-platform-reqs
       - save_cache:
@@ -54,7 +54,7 @@ jobs:
             - ~/.yarn
 
       # prepare the database
-      - run: touch storage/testing.sqlite
+      - run: touch storage/testing.mysql
       - run: php artisan migrate --env=testing --database=mysql --force
 
       # run tests with phpunit or codecept
