--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           keys:
             - composer-v1-{{ checksum "composer.json" }}
             - composer-v1-
-      - run: composer install -n --ignore-platform-reqs
+      - run: composer install
       - save_cache:
           key: composer-v1-{{ checksum "composer.json" }}
           paths:
