--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: ''
           MYSQL_PASSWORD: ''
 
-    working_directory: ~/src
-
+    working_directory: ~/Try.API.PHP
     steps:
       - checkout
       - run:
@@ -33,22 +32,22 @@ jobs:
       # composer cache
       - restore_cache:
           keys:
-            - composer-v1-{{ checksum "src/composer.json" }}
+            - composer-v1-{{ checksum "Laravel.React/composer.json" }}
             - composer-v1-
-      - run: composer install -n --prefer-dist
+      - run: composer install
       - save_cache:
-          key: composer-v1-{{ checksum "src/composer.json" }}
+          key: composer-v1-{{ checksum "Laravel.React/composer.json" }}
           paths:
             - vendor
 
       # node cache
       - restore_cache:
           keys:
-            - node-v4-{{ checksum "src/package.json" }}
+            - node-v4-{{ checksum "Laravel.React/package.json" }}
             - node-v4-
       - run: npm install
       - save_cache:
-          key: node-v4-{{ checksum "src/package.json" }}
+          key: node-v4-{{ checksum "Laravel.React/package.json" }}
           paths:
             - node_modules
             - ~/.yarn
