--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,11 @@ jobs:
       - image: circleci/mysql:8.0.20
         command: mysqld --default-authentication-plugin=mysql_native_password
         environment:
-          MYSQL_HOST: 127.0.0.1
+          MYSQL_HOST: '127.0.0.1'
           MYSQL_USER: 'root'
-          MYSQL_DATABASE: React_API
+          MYSQL_DATABASE: 'React_API'
           MYSQL_ROOT_PASSWORD: ''
-          MYSQL_PASSWORD: ''
+          MYSQL_PASSWORD: 'root'
 
     working_directory: ~/Laravel.React
     steps:
