--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,11 @@ jobs:
       - image: circleci/mysql:8.0.20
         command: mysqld --default-authentication-plugin=mysql_native_password
         environment:
-          MYSQL_HOST: <%= ENV['DB_HOST'] || '127.0.0.1' %>
+          MYSQL_HOST: '127.0.0.1'
           MYSQL_USER: 'root'
           MYSQL_DATABASE: 'React_API'
-          MYSQL_ROOT_PASSWORD: ''
-          MYSQL_PASSWORD: 'root'
+          MYSQL_ROOT_PASSWORD: ' '
+          MYSQL_PASSWORD: ' '
 
     working_directory: ~/Laravel.React
     steps:
@@ -44,21 +44,7 @@ jobs:
       - run:
           name: Run PHPUnit
           working_directory: Laravel.React
-          command: vendor/bin/phpunit tests/Feature/TodoRegisterTest.php
-
-      # node cache
-      - restore_cache:
-          keys:
-            - node-v4-{{ checksum "Laravel.React/package.json" }}
-            - node-v4-
-      - run: npm install
-      - save_cache:
-          key: node-v4-{{ checksum "Laravel.React/package.json" }}
-          paths:
-            - node_modules
-            - ~/.yarn
-
-      # prepare the database
+          command: vendor/bin/phpunit
 
 
 workflows:
