--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - image: circleci/mysql:8.0.22
         command: mysqld --default-authentication-plugin=mysql_native_password
         environment:
-          MYSQL_HOST: '127.0.0.1'
+          MYSQL_HOST: env('DB_HOST', '127.0.0.1')
           MYSQL_USER: 'root'
           MYSQL_DATABASE: 'React_API'
           MYSQL_ROOT_PASSWORD: ' '
