--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     docker:
       - image: circleci/php:7.2-stretch
-#      - image: circleci/mysql:8.0.22
+      - image: circleci/mysql:5.7
         command: mysqld --default-authentication-plugin=mysql_native_password
 
         environment:
