--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,17 @@
-
 version: 2
 jobs:
   test:
     docker:
+      # Specify the version you desire here
       - image: circleci/php:7.2-stretch
-      - image: circleci/mysql:5.7
+      - image: circleci/mysql:8.0.20
         command: mysqld --default-authentication-plugin=mysql_native_password
-
         environment:
           MYSQL_HOST: 127.0.0.1
           MYSQL_USER: 'root'
-          MYSQL_DATABASE: 'React_API'
-          MYSQL_ROOT_PASSWORD: ' '
-          MYSQL_PASSWORD: ' '
+          MYSQL_DATABASE: React_API
+          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_PASSWORD: ''
 
     working_directory: ~/Laravel.React
     steps:
@@ -27,22 +26,39 @@ jobs:
           command: |
             curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
             sudo apt-get install -y nodejs
+      - run:
+          name: Run Unittest
+          working_directory: Laravel.React
+          command: vendor/bin/phpunit
+      # Download and cache dependencies
 
+      # composer cache
       - restore_cache:
           keys:
             - composer-v1-{{ checksum "Laravel.React/composer.json" }}
             - composer-v1-
       - run:
-            working_directory: Laravel.React
-            command: composer install -n --prefer-dist
+          working_directory: Laravel.React
+          command: composer install -n --prefer-dist
       - save_cache:
           key: composer-v1-{{ checksum "Laravel.React/composer.json" }}
           paths:
             - vendor
-      - run:
-          name: Run Unittest
-          working_directory: Laravel.React
-          command: vendor/bin/phpunit
+
+      # node cache
+      - restore_cache:
+          keys:
+            - node-v4-{{ checksum "Laravel.React/package.json" }}
+            - node-v4-
+      - run: npm install
+      - save_cache:
+          key: node-v4-{{ checksum "Laravel.React/package.json" }}
+          paths:
+            - node_modules
+            - ~/.yarn
+
+      # prepare the database
+
 
 workflows:
   version: 2
