--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Run Unittest
           working_directory: Laravel.React
-          command: vendor/bin/phpunit
+          command: app/tests/Feature/TodoRegisterTest.php
       # Download and cache dependencies
 
       # composer cache
