--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Run PHPUnit
           working_directory: Laravel.React
-          command: vendor/bin/phpunit
+          command: ./vendor/bin/phpunit
       # Download and cache dependencies
 
       # composer cache
