--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,7 @@ jobs:
             sudo apt-get install -y nodejs
       - run:
           name: Run Unit tests
-          working_directory: Laravel.React
-          command: vendor/bin/phpunit
+          command:  vendor/bin/phpunit tests
       # Download and cache dependencies
 
       # composer cache
