--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: ''
           MYSQL_PASSWORD: ''
 
-    working_directory: ~/Laravel.React
+
     steps:
       - checkout
       - run:
@@ -28,7 +28,7 @@ jobs:
             sudo apt-get install -y nodejs
       - run:
           name: Run Unit tests
-          command:  vendor/bin/phpunit tests
+          command: vendor/bin/phpunit
       # Download and cache dependencies
 
       # composer cache
