--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: ''
           MYSQL_PASSWORD: ''
 
-
+    working_directory: ~Try.API.PHP/Laravel.React
     steps:
       - checkout
       - run:
@@ -28,7 +28,7 @@ jobs:
             sudo apt-get install -y nodejs
       - run:
           name: Run Unit tests
-          command: /Laravel.React/vendor/bin/phpunit
+          command:  Laravel.React/vendor/bin/phpunit
       # Download and cache dependencies
 
       # composer cache
