--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
             sudo apt-get install -y nodejs
       - run:
           name: Run Unit tests
-          command:  /Laravel.React/vendor/bin/phpunit
+          command:  ./vendor/bin/phpunit
       # Download and cache dependencies
 
       # composer cache
@@ -42,7 +42,7 @@ jobs:
       - save_cache:
           key: composer-v1-{{ checksum "Laravel.React/composer.json" }}
           paths:
-            - vendor
+            - ./vendor
 
       # node cache
       - restore_cache:
