git.ignored.fixed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
             curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
             sudo apt-get install -y nodejs
       - run:
+          working_directory: ~/Laravel.React
           name: Run Unit tests
           command:  ./vendor/bin/phpunit
       # Download and cache dependencies
