git.ignored.fixed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
             curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
             sudo apt-get install -y nodejs
       - run:
-          name: Run Unit tests
-          working_directory: ~/Try.API.PHP/Laravel.React
+          name: Run Unittest
+          working_directory: ~/Laravel.React
           command:  vendor/bin/phpunit
       # Download and cache dependencies
 
