--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
             sudo apt-get install -y nodejs
       - run:
           name: Run Unittest
-          working_directory: ~/Laravel.React
-          command:  vendor/bin/phpunit
+          working_directory: ~/Laravel.React/app/tests/Feature
+          command: vendor/bin/phpunit
       # Download and cache dependencies
 
       # composer cache
