--- a/Laravel.React/composer.json
+++ b/Laravel.React/composer.json
@@ -20,7 +20,7 @@
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
-        "phpstan/phpstan": "^0.12.76",
+        "phpstan/phpstan": "^0.12.79",
         "phpunit/phpunit": "^8.5"
     },
     "config": {
@@ -60,7 +60,8 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "test": ["./vendor/bin/phpunit test"
+        "test": [
+            "vendor/bin/phpunit "
         ]
     }
 }
